Adding code for generating random strings from command line
pcfg.h,cpp
    Adding generateRandomStrings function

GenerateRandomStrings.cpp
    Adding entry point from command line

makefile
    Adding compilation step for GenerateRandomStrings.cpp

structure.h,cpp
    Adding ability to get probability for a structure
    Passing a random number generator argument to generate random strings to
    avoid re-creating the generator because creating generators is expensive.

--- a/binaries/makefile
+++ b/binaries/makefile
@@ -41,6 +41,12 @@ GenerateStrings: GenerateStrings.o
 GenerateStrings.o: GenerateStrings.cpp .classes
 	$(CC) $(CFLAG) -c GenerateStrings.cpp
 
+GenerateRandomStrings: GenerateRandomStrings.o
+	$(CC) $(CFLAG) $(CLASS_OBJ_FILES) $< -o $@ -lgmpxx -lgmp
+
+GenerateRandomStrings.o: GenerateRandomStrings.cpp .classes
+	$(CC) $(CFLAGS) -c $<
+
 LookupGuessNumbers: LookupGuessNumbers.o
 	$(CC) $(CFLAG) $(CLASS_OBJ_FILES) LookupGuessNumbers.o -o LookupGuessNumbers -lgmpxx -lgmp
 
