--- a/binaries/makefile
+++ b/binaries/makefile
@@ -45,7 +45,7 @@ GenerateRandomStrings: GenerateRandomStrings.o
 	$(CC) $(CFLAG) $(CLASS_OBJ_FILES) $< -o $@ -lgmpxx -lgmp
 
 GenerateRandomStrings.o: GenerateRandomStrings.cpp .classes
-	$(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAG) -c $<
 
 LookupGuessNumbers: LookupGuessNumbers.o
 	$(CC) $(CFLAG) $(CLASS_OBJ_FILES) LookupGuessNumbers.o -o LookupGuessNumbers -lgmpxx -lgmp
