Adding exectuable to be removed on clean in the makefile

--- a/binaries/makefile
+++ b/binaries/makefile
@@ -74,6 +74,7 @@ clean:
 	rm -f GeneratePatterns
 	rm -f sortedcountaggregator
 	rm -f LookupGuessNumbers
+	rm -f LookupProbabilities
 	rm -f GenerateStrings
 	rm -f GenerateRandomStrings
 	rm -f .classes
