makefile: Set CXXFLAGS to allow the make builtin recipes to do the right thing on a component update

--- a/binaries/makefile
+++ b/binaries/makefile
@@ -8,6 +8,7 @@
 #
 CC = g++
 CFLAGS =-O3 -Wall -g -std=c++11
+CXXFLAGS = $(CFLAGS)
 # Enable the following options (and add \ to the above line) for more warnings
 # -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization \
 # -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept \
